<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LLV"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9C4"
    android:orientation="vertical"
    android:scrollbarStyle="insideInset"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="165dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/calicon" />

            <TextView
                android:id="@+id/et1"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/enter_your_birth_date_in_dd_mm_yyyy_format"
                android:textAlignment="gravity"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <EditText
                android:id="@+id/etDate"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="#B7857913"
                android:ems="10"
                android:freezesText="false"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/enter_date"
                android:importantForAutofill="no"
                android:inputType="date"
                android:maxLength="10"
                android:textColor="#2E2A2A"
                android:textColorHint="#0B0A0A" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="354dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:backgroundTint="#FF9800"
                android:shadowColor="#170C0C"
                android:text="@string/calculate"
                android:textAlignment="center"
                android:textColor="#4A4040"
                android:textColorHint="#272727"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="40dp"
                android:hint="@string/note_please_enter_birth_date_accordingly_for_example_16_11_2000"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>